--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack-query-firebase/react": "^1.0.5",
-    "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-query": "^5.67.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -45,8 +45,8 @@
     "lucide-react": "^0.475.0",
     "next": "^15.0.0",
     "patch-package": "^8.0.0",
-    "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "react": "19.0.0-rc.0",
+    "react-dom": "19.0.0-rc.0",
     "react-hook-form": "7.56.1",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.4.0",
@@ -56,8 +56,8 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20",
-    "@types/react": "rc",
-    "@types/react-dom": "rc",
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc",
     "genkit-cli": "^1.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.7",
@@ -77,15 +77,15 @@
       "react": "$react",
       "react-dom": "$react-dom"
     },
-    "@types/react-dom": {
-      "@types/react": "$@types/react"
-    },
     "@tanstack/react-query": {
        "react": "$react"
     },
     "recharts": {
        "react": "$react",
        "react-dom": "$react-dom"
+    },
+    "react-day-picker": {
+        "react": "$react"
     }
   }
 }
